# selfbalancingbicyle

./: Masterarbeit.docx  README.md  README_Regelschleifen.md  x2gopw.HEIC
Bockenheim Map/: map.osm
Bockenheim Map/worlds/: .self_balance_word.wbproj  .self_balance_word_2.wbproj  .self_balance_word_3.wbproj  .uni_campus_bockenheim.wbproj  self_balance_word_3.wbt
MPC_Regeler/worlds/: .Little Bicycle V2.wbproj  Little Bicycle V2.wbt
Pysik/worlds/: .Little Bicycle V2.wbproj
Regelstuerung/: DETAILED_COMPARISON_README.md  README_OVERVIEW.md  README_ZWEI_CONTROLLER_INTEGRATION.md  VERIFICATION_CHECKLIST.md  run_balance_controller.sh  run_gui.sh  run_vision_controller.sh  test_integration.py
Regelstuerung/GUI/: README.md  balance_config.json  balance_controller_gui.py  bicycle_controller_gui.py  controller_config.json  install_dependencies.sh  launch_gui.sh
Regelstuerung/Monitoring/: balance_log_20250625_232327.csv  balance_log_20250625_232615.csv  balance_log_20250625_234343.csv  balance_log_20250625_234351.csv  balance_log_20250625_234405.csv  balance_log_20250625_234440.csv  balance_log_20250625_234936.csv  balance_log_20250625_235048.csv  balance_log_20250625_235111.csv  balance_log_20250625_235352.csv  balance_log_20250625_235437.csv  balance_log_20250625_235705.csv  balance_log_20250625_235717.csv  balance_log_20250626_000001.csv  balance_log_20250626_000006.csv  balance_log_20250626_000014.csv  balance_log_20250626_000051.csv  balance_log_20250626_105832.csv  balance_log_20250626_105846.csv  balance_log_20250626_105908.csv  balance_log_20250626_110942.csv  balance_log_20250626_110950.csv  balance_log_20250626_111715.csv  balance_log_20250626_111811.csv  balance_log_20250626_111835.csv  (+77 more)
Vorherige Arbeiten/: README.md
Vorherige Arbeiten/BachelorArbeit_2023_zander/autobike/: CMakeLists.txt  ab_error_handling.c  ab_error_handling.h  all_pin_default.sh  autobike.c  reset_autobike.c
Vorherige Arbeiten/BachelorArbeit_2023_zander/autobike/interfaces/: ab_bno055.c  ab_bno055.h  ab_bts7960.c  ab_bts7960.h  ab_hnm.c  ab_hnm.h  ab_i2c.c  ab_i2c.h  ab_io.c  ab_io.h  ab_md49.c  ab_md49.h  ab_pid.c  ab_pid.h  ab_remote.c  ab_remote.h
Vorherige Arbeiten/BachelorArbeit_2023_zander/autobike/logging/tools/: data_visualization.txt  plot.py
Vorherige Arbeiten/BachelorArbeit_2023_zander/autobike/pru_bike_speed/: Makefile  devmem2  helpful_commands.txt  pru_bike_speed.asm  pru_bike_speed.c
Vorherige Arbeiten/BachelorArbeit_2023_zander/autobike/tests/: bno_test.c  hnm_pid_test.c  hnm_remote_test.c  hnm_test.c  md49_polling_test.c  remote_test.c  steering_pid_test.c  steering_test.c
worlds/: Little Bicycle V2.wbt
x2go/: x2go.HEIC
(+249 files in other folders)
